# VIREON-Sentience

./: CITATION.cff  MATH_ENGINE_NEURALODE_VINFINITY.md  MATH_ENGINE_TRP_RSM.md  README.md  blackbox_schema.py  engine_trp_rsm.py  pyproject.toml  sentience_metrics.py  sentience_run_bandit.py  sentience_run_demo.py
.github/workflows/: ci.yml
benches/: __init__.py  run_all_benches.py
benches/envs/bandits_shift/: __init__.py  env.py
benches/envs/memory_maze/: __init__.py  env.py
benches/envs/mirror_game/: __init__.py  env.py
benches/envs/time_warp_grid/: __init__.py  env.py
benches/reports/: make_tables.py  make_tables_memory.py  make_tables_mirror.py  make_tables_rsm.py  make_tables_timewarp.py
benches/runners/: train_baselines.py  train_memory_baselines.py  train_memory_trp.py  train_memory_trp_rsm.py  train_mirror_baselines.py  train_mirror_trp.py  train_mirror_trp_rsm.py  train_timewarp_baselines.py  train_timewarp_trp.py  train_timewarp_trp_rsm.py  train_trp.py  train_trp_rsm.py
modules/sentience/: engine_sentience.py
tests/: test_memory_maze.py  test_memory_runners.py  test_metrics.py  test_mirror_game.py  test_mirror_runners.py  test_rsm.py  test_run_all_benches.py  test_time_warp_grid.py  test_timewarp_runners.py  test_trp.py  test_trp_rsm_runner.py
vireon/: __init__.py  consciousness_substrate_bridge.py
vireon/metrics/: __init__.py  logger.py  rsm_metrics.py  run_context.py  trp_metrics.py
vireon/rsm/: __init__.py  collapse_guard.py  mirror.py  self_forecast.py
vireon/trp/: __init__.py  alpha.py  leash.py  pacing.py  warp.py
(+1 files in other folders)
